--- a/myproject/metal/templates/register/index.html
+++ b/myproject/metal/templates/register/index.html
@@ -13,7 +13,7 @@
                         <li role="presentation" class="active">
                             <a href="#step1" data-toggle="tab" aria-controls="step1" role="tab" title="Step 1">
                             <span class="round-tab">
-                                <i class="glyphicon glyphicon-user"></i>
+                                <i class="fa fa-user"></i>
                             </span>
                             </a>
                         </li>
@@ -21,14 +21,14 @@
                         <li role="presentation" class="disabled">
                             <a href="#step2" data-toggle="tab" aria-controls="step2" role="tab" title="Step 2">
                             <span class="round-tab">
-                                <i class="glyphicon glyphicon-book"></i>
+                                <i class="fa fa-cube"></i>
                             </span>
                             </a>
                         </li>
                         <li role="presentation" class="disabled">
                             <a href="#step3" data-toggle="tab" aria-controls="step3" role="tab" title="Step 3">
                             <span class="round-tab">
-                                <i class="glyphicon glyphicon-picture"></i>
+                                <i class="fa fa-cubes"></i>
                             </span>
                             </a>
                         </li>
@@ -36,7 +36,7 @@
                         <li role="presentation" class="disabled">
                             <a href="#complete" data-toggle="tab" aria-controls="complete" role="tab" title="Complete">
                             <span class="round-tab">
-                                <i class="glyphicon glyphicon-ok"></i>
+                                <i class="fa fa-flag-checkered"></i>
                             </span>
                             </a>
                         </li>
