added wizard for registration added buyer view, and supplier view added buyer landing page and supplier landing page

--- a/myproject/metal/templates/register/index.html
+++ b/myproject/metal/templates/register/index.html
@@ -46,8 +46,21 @@
                 <form role="form">
                     <div class="tab-content">
                         <div class="tab-pane active" role="tabpanel" id="step1">
-                            <h3>Step 1</h3>
-                            <p>This is step 1</p>
+
+                            <div class="row">
+                                <div class="col-md-12">
+
+                                    <div class="box-body">
+
+                                        <h3>Step 1</h3>
+                                        <p>This is step 1</p>
+
+                                    </div>
+
+                                </div>
+                            </div>
+
+
                             <ul class="list-inline pull-right">
                                 <li>
                                     <button type="button" class="btn btn-primary next-step">Save and continue</button>
@@ -55,8 +68,12 @@
                             </ul>
                         </div>
                         <div class="tab-pane" role="tabpanel" id="step2">
-                            <h3>Step 2</h3>
-                            <p>This is step 2</p>
+                            <div class="box-body">
+
+                                <h3>Step 2</h3>
+                                <p>This is step 2</p>
+
+                            </div>
                             <ul class="list-inline pull-right">
                                 <li>
                                     <button type="button" class="btn btn-default prev-step">Previous</button>
@@ -67,8 +84,12 @@
                             </ul>
                         </div>
                         <div class="tab-pane" role="tabpanel" id="step3">
-                            <h3>Step 3</h3>
-                            <p>This is step 3</p>
+                            <div class="box-body">
+
+                                <h3>Step 2</h3>
+                                <p>This is step 2</p>
+
+                            </div>
                             <ul class="list-inline pull-right">
                                 <li>
                                     <button type="button" class="btn btn-default prev-step">Previous</button>
@@ -84,8 +105,12 @@
                             </ul>
                         </div>
                         <div class="tab-pane" role="tabpanel" id="complete">
-                            <h3>Complete</h3>
-                            <p>You have successfully completed all steps.</p>
+                            <div class="box-body">
+
+                                <h3>Completed</h3>
+                                <p>You have completed your registration.</p>
+
+                            </div>
                         </div>
                         <div class="clearfix"></div>
                     </div>
