--- a/myproject/metal/templates/shared/main_supplier.html
+++ b/myproject/metal/templates/shared/main_supplier.html
@@ -47,7 +47,7 @@
 
 </head>
 <!-- ADD THE CLASS layout-top-nav TO REMOVE THE SIDEBAR. -->
-<body class="skin-black layout-top-nav" style="height: auto; min-height: 100%;">
+<body class="skin-green-light layout-top-nav" style="height: auto; min-height: 100%;">
 <div class="wrapper" style="height: auto; min-height: 100%;">
 
   {% include 'shared/navi_supplier.html' %}
