--- a/myproject/metal/templates/shared/navi_supplier.html
+++ b/myproject/metal/templates/shared/navi_supplier.html
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
-                  <input type="text" class="form-control" id="navbar-search-input" placeholder="Search Supplier">
+                  <input type="text" class="form-control" id="navbar-search-input" placeholder="Search Document">
                 </div>
               </form>
         </div>
