--- a/myproject/metal/templates/shared/navi_buyer.html
+++ b/myproject/metal/templates/shared/navi_buyer.html
@@ -2,92 +2,94 @@
 
 <header class="main-header">
     <nav class="navbar navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="" class="navbar-brand"><b>METALPOLIS</b>&nbsp;marketplace</a>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-            <i class="fa fa-bars"></i>
-          </button>
-        </div>
+        <div class="container">
+            <div class="navbar-header">
+                <a href="" class="navbar-brand"><b>METALPOLIS</b>&nbsp;marketplace</a>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#navbar-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+            </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
-            <form class="navbar-form navbar-left" role="search">
-                <div class="form-group">
-                  <input type="text" class="form-control" id="navbar-search-input" placeholder="Search Supplier">
-                </div>
-              </form>
-        </div>
-        <!-- /.navbar-collapse -->
-        <!-- Navbar Right Menu -->
-        <div class="navbar-custom-menu">
-            <ul class="nav navbar-nav">
-            <li class="active"><a href="">Dashboard <span class="sr-only">(current)</span></a></li>
-            <li><a href="">Timeline</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                  <li><a href="">RFQ Lists</a></li>
-                    <li><a href="">Quotations</a></li>
-{#                <li><a href="#">Something else here</a></li>#}
-{#                <li class="divider"></li>#}
-{#                <li><a href="#">Separated link</a></li>#}
-{#                <li class="divider"></li>#}
-{#                <li><a href="#">One more separated link</a></li>#}
-              </ul>
-            </li>
-              <li><a href="">Create RFQ</a></li>
-          </ul>
-          <ul class="nav navbar-nav">
-            <!-- User Account Menu -->
-            <li class="dropdown user user-menu">
-              <!-- Menu Toggle Button -->
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <!-- The user image in the navbar-->
-                <img src="{% static 'market' %}/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                <span class="hidden-xs">Tuan Tong Foo</span>
-              </a>
-              <ul class="dropdown-menu">
-                <!-- The user image in the menu -->
-                <li class="user-header">
-                  <img src="{% static 'market' %}/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
+                <form class="navbar-form navbar-left" role="search">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="navbar-search-input" placeholder="Search Supplier">
+                    </div>
+                </form>
+            </div>
+            <!-- /.navbar-collapse -->
+            <!-- Navbar Right Menu -->
+            <div class="navbar-custom-menu">
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url 'user_buyer_index' %}">Dashboard <span class="sr-only">(current)</span></a></li>
+                    <li><a href="{% url 'user_buyer_timeline' %}">Timeline</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="{% url 'user_buyer_rfq_list' %}">RFQ Lists</a></li>
+                            <li><a href="{% url 'user_buyer_quotation_list' %}">Quotations</a></li>
+                            {#                <li><a href="#">Something else here</a></li>#}
+                            {#                <li class="divider"></li>#}
+                            {#                <li><a href="#">Separated link</a></li>#}
+                            {#                <li class="divider"></li>#}
+                            {#                <li><a href="#">One more separated link</a></li>#}
+                        </ul>
+                    </li>
+                    <li><a href="{% url 'user_buyer_rfq_create' 0 %}">Create RFQ</a></li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <!-- User Account Menu -->
+                    <li class="dropdown user user-menu">
+                        <!-- Menu Toggle Button -->
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <!-- The user image in the navbar-->
+                            <img src="{% static 'market' %}/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                            <!-- hidden-xs hides the username on small devices so only the image appears. -->
+                            <span class="hidden-xs">Tuan Tong Foo</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <!-- The user image in the menu -->
+                            <li class="user-header">
+                                <img src="{% static 'market' %}/img/user2-160x160.jpg" class="img-circle"
+                                     alt="User Image">
 
-                  <p>
-                    Tuan Tong Foo - Purchasing Department
-                    <small>Member since Nov. 2012</small>
-                  </p>
-                </li>
-                <!-- Menu Body -->
-{#                <li class="user-body">#}
-{#                  <div class="row">#}
-{#                    <div class="col-xs-4 text-center">#}
-{#                      <a href="#">Followers</a>#}
-{#                    </div>#}
-{#                    <div class="col-xs-4 text-center">#}
-{#                      <a href="#">Sales</a>#}
-{#                    </div>#}
-{#                    <div class="col-xs-4 text-center">#}
-{#                      <a href="#">Friends</a>#}
-{#                    </div>#}
-{#                  </div>#}
-{#                  <!-- /.row -->#}
-{#                </li>#}
-                <!-- Menu Footer-->
-                <li class="user-footer">
-                  <div class="pull-left">
-                    <a href="" class="btn btn-default btn-flat">Profile</a>
-                  </div>
-                  <div class="pull-right">
-                    <a href="" class="btn btn-default btn-flat">Sign out</a>
-                  </div>
-                </li>
-              </ul>
-            </li>
-          </ul>
+                                <p>
+                                    Tuan Tong Foo - Purchasing Department
+                                    <small>Member since Nov. 2012</small>
+                                </p>
+                            </li>
+                            <!-- Menu Body -->
+                            {#                <li class="user-body">#}
+                            {#                  <div class="row">#}
+                            {#                    <div class="col-xs-4 text-center">#}
+                            {#                      <a href="#">Followers</a>#}
+                            {#                    </div>#}
+                            {#                    <div class="col-xs-4 text-center">#}
+                            {#                      <a href="#">Sales</a>#}
+                            {#                    </div>#}
+                            {#                    <div class="col-xs-4 text-center">#}
+                            {#                      <a href="#">Friends</a>#}
+                            {#                    </div>#}
+                            {#                  </div>#}
+                            {#                  <!-- /.row -->#}
+                            {#                </li>#}
+                            <!-- Menu Footer-->
+                            <li class="user-footer">
+                                <div class="pull-left">
+                                    <a href="{% url 'user_buyer_profile' 0 %}" class="btn btn-default btn-flat">Profile</a>
+                                </div>
+                                <div class="pull-right">
+                                    <a href="" class="btn btn-default btn-flat">Sign out</a>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-custom-menu -->
         </div>
-        <!-- /.navbar-custom-menu -->
-      </div>
-      <!-- /.container-fluid -->
+        <!-- /.container-fluid -->
     </nav>
-  </header>
+</header>
