New UI Prototypes - quotation view for supplier and buyer - quotation edit for supplier and buyer

--- a/myproject/metal/templates/user_buyer/quotation_view.html
+++ b/myproject/metal/templates/user_buyer/quotation_view.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h2 class="page-header">
-                    <i class="fa fa-globe"></i> Request for Quotation
+                    <i class="fa fa-globe"></i> Supplier Quotation
                     <small class="pull-right">Date: {{ date }}</small>
                 </h2>
             </div>
@@ -133,17 +133,18 @@
         <!-- /.row -->
 
         <!-- this row will not appear when printing -->
-        <div class="row no-print">
-            <div class="col-xs-12">
-                <a href="{% url 'user_supplier_quotation_edit' 0 %}" class="btn btn-info">
-                    <i class="fa fa-pencil-square-o"></i>
-                    Register Interest &amp; Draft Quotation
-                </a>
-                <button type="button" class="btn btn-primary pull-right" style="margin-right: 5px;">
-                    <i class="fa fa-download"></i> Generate PDF
-                </button>
-            </div>
-        </div>
+        {#      <div class="row no-print">#}
+        {#        <div class="col-xs-12">#}
+        {#          <a href="invoice-print.html" target="_blank" class="btn btn-default"><i class="fa fa-print"></i> Print</a>#}
+        {#          <button type="button" class="btn btn-success pull-right"><i class="fa fa-credit-card"></i> Send RFQ#}
+        {#          </button>#}
+        {#          <button type="button" class="btn btn-primary pull-right" style="margin-right: 5px;">#}
+        {#            <i class="fa fa-download"></i> Generate PDF#}
+        {#          </button>#}
+        {#        </div>#}
+        {#      </div>#}
+
+
     </section>
 
     <div class="row">
