--- a/myproject/metal/templates/shared/navi_buyer.html
+++ b/myproject/metal/templates/shared/navi_buyer.html
@@ -81,7 +81,7 @@
                                     <a href="{% url 'user_buyer_profile' 0 %}" class="btn btn-default btn-flat">Profile</a>
                                 </div>
                                 <div class="pull-right">
-                                    <a href="" class="btn btn-default btn-flat">Sign out</a>
+                                    <a href="{% url 'sign_out' %}" class="btn btn-default btn-flat">Sign out</a>
                                 </div>
                             </li>
                         </ul>
