--- a/myproject/metal/templates/registration/password_reset_complete.html
+++ b/myproject/metal/templates/registration/password_reset_complete.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <p>
-    Your password has been set. You may go ahead and <a href="{% url 'index' %}">sign in</a> now.
+    Your password has been set. You may go ahead and <a href="{% url 'public_index' %}">sign in</a> now.
   </p>
 </body>
 </html>
